...
                  size: 60,
                  color: Colors.white,
                ),
              ),
              const SizedBox(height: 16),
              Text(
                'Bienvenido a SergasProMax',
                style: const TextStyle(
                  fontSize: 26,
                  fontWeight: FontWeight.w600,
                  color: Colors.white,
                ),
                textAlign: TextAlign.center,
...
            borderRadius: BorderRadius.circular(isWatch ? 10 : 16),
          ),
          shadowColor: Colors.black26,
          elevation: 3,
        ),
        child: Text(
          'Entrar',
          style: TextStyle(
            fontSize: isWatch ? 12 : 18,
            fontWeight: FontWeight.w500,
          ),
        ),
      ),
...
