...
                          ),
                          icon: Icon(
                            Icons.calendar_today,
                            size: isWatch ? 12 : 24,
                          ),
                          label: Text(
                            "Seleccionar Intervalo",
                            style: TextStyle(fontSize: 16),
                          ),
                        ),
                      ),
                    Expanded(
                      child: isLoadingFilter
...
